Fix the quote spacing

--- a/style.css
+++ b/style.css
@@ -203,6 +203,7 @@ a {
     font-size: 22px;
     padding-right: 200px;
     font-weight: bolder;
+    margin-right: 250px;
 }
 
 
